@@ -36,6 +36,8 @@ Version 3.0.0
     root object together with other backends.
   + The array and count of info attributes are now embedded in the new
     struct hwloc_infos_s.
+    - hwloc_cpukinds_get_info() and hwloc_cpukinds_register() now manipulate
+      infos as such a structure.
 * Tools
   + lstopo has a new --osf option to tune the displaying of object
     attributes and units.
